WebCore:

2009-04-21  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 25162: REGRESSION (r41176-r41242): Drag-selection above/below the line does not select to beginning/end
        https://bugs.webkit.org/show_bug.cgi?id=25162
        rdar://problem/6764354

        * page/Settings.cpp:
        (WebCore::Settings::Settings): Initialize editing behavior to Mac-style for PLATFORM(MAC).
        Later we may want to change this default to encompass other versions running on Mac.

        * page/Settings.h: Added EditingBehavior, setEditingBehavior, editingBehavior, and
        m_editingBehavior. Also moved m_maximumDecodedImageSize out of the middle of all
        the bit fields.

        * platform/graphics/IntPoint.h: Added a constructor to turn an IntSize into an IntPoint.
        I'm not sure the distinction here is serving us well at the moment. When converting from
        global to local coordinates you want to do IntPoint - IntPoint and have the result be
        another IntPoint, not an IntSize. And so on.

        * rendering/RenderBlock.cpp:
        (WebCore::positionForPointRespectingEditingBoundaries): Changed to use pointers more and
        separate coordinates less.
        (WebCore::RenderBlock::positionForPointWithInlineChildren): Turned into a member function.
        Added separate cases to support the Mac and Windows behavior.
        (WebCore::RenderBlock::positionForPoint): Updated for the change above. Also moved the
        computation of pointInContents closer to the place it's used.

        * rendering/RenderBlock.h: Updated for the new private member function.

LayoutTests:

2009-04-21  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Bug 25162: REGRESSION (r41176-r41242): Drag-selection above/below the line does not select to beginning/end
        https://bugs.webkit.org/show_bug.cgi?id=25162
        rdar://problem/6764354

        * editing/selection/resources/click-in-margins-inside-editable-div.js:
        Updated to expect different results on the Mac.
        * editing/selection/resources/click-in-padding-with-multiple-line-boxes.js: Ditto.

        * fast/css-generated-content/positioned-background-hit-test-crash.html: Clear the selection at
        the end of the test so the result won't include a caret.

        * platform/mac/editing/selection/click-in-margins-inside-editable-div-expected.txt:
        * platform/mac/editing/selection/click-in-padding-with-multiple-line-boxes-expected.txt:
        Copied from LayoutTests/editing/selection. Then changed to expect the different Mac results.

        * platform/mac/editing/selection/select-from-textfield-outwards-expected.checksum:
        * platform/mac/editing/selection/select-from-textfield-outwards-expected.png:
        * platform/mac/editing/selection/select-from-textfield-outwards-expected.txt:
        Changed to expect the different Mac results.

        * platform/mac/fast/css-generated-content/positioned-background-hit-test-crash-expected.txt:
        Changed to expect no caret.

        * platform/win/editing/selection/click-in-margins-inside-editable-div-expected.txt:
        * platform/win/editing/selection/click-in-padding-with-multiple-line-boxes-expected.txt:
        Copied from editing/selection.

        * platform/win/editing/selection/select-from-textfield-outwards-expected.checksum:
        * platform/win/editing/selection/select-from-textfield-outwards-expected.png:
        * platform/win/editing/selection/select-from-textfield-outwards-expected.txt:
        Copied from platform/mac/editing/selection.



Canonical link: https://commits.webkit.org/34784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42732 268f45cc-cd09-0410-ab3c-d52691b4dbfc