WebCore/bindings/js/JSLazyEventListener.cpp
@@ -37,12 +37,8 @@ static WTF::RefCountedLeakCounter eventListenerCounter("JSLazyEventListener");
 static const String& eventParameterName(bool isSVGEvent)
 {
     DEFINE_STATIC_LOCAL(const String, eventString, ("event"));
-#if ENABLE(SVG)
     DEFINE_STATIC_LOCAL(const String, evtString, ("evt"));
     return isSVGEvent ? evtString : eventString;
-#else
-    return eventString;
-#endif
 }
 
 JSLazyEventListener::JSLazyEventListener(const String& functionName, const String& eventParameterName, const String& code, JSDOMGlobalObject* globalObject, Node* node, int lineNumber)
